@@ -31,6 +31,8 @@ Features
   have been converted to the new system. (Issue #2107)
 * Added ``CATEGORIES_INDEX_PATH``, similar to ``TAGS_INDEX_PATH``.
   (Issue #2567)
+* Made ``INDEX_PATH``, ``RSS_PATH`` and ``AUTHOR_PATH`` translatable.
+  (Issue #1914)
 
 New in v7.8.1
 =============
